--- a/templates/sellcoins/_api_docs.html
+++ b/templates/sellcoins/_api_docs.html
@@ -1,22 +1,14 @@
 <q-card>
   <q-card-section>
     <p>
-      Grab your Stripe
-      <a href="https://dashboard.stripe.com/test/apikeys">API key</a><br />
+      GRAB YOU STRIPE
+      <a href="https://dashboard.stripe.com/test/apikeys">API KEY</a><br />
       <small>
         Created by,
-        <a class="text-secondary" href="https://github.com/arcbtc"
-          >Ben Arc</a
-        ></small
-      >
+        <a class="text-secondary" href="https://github.com/arcbtc">Ben Arc</a></small>
     </p>
   </q-card-section>
-  <q-expansion-item
-    group="extras"
-    icon="swap_vertical_circle"
-    label="API info"
-    :content-inset-level="0.5"
-  >
+  <q-expansion-item group="extras" icon="swap_vertical_circle" label="API info" :content-inset-level="0.5">
     <q-btn flat label="Swagger API" type="a" href="../docs#/buy"></q-btn>
   </q-expansion-item>
 </q-card>
