--- a/templates/sellcoins/_sellcoins.html
+++ b/templates/sellcoins/_sellcoins.html
@@ -2,24 +2,10 @@
   <q-card>
     <q-card-section>
       <p>Sell coins for cash</p>
-      <small
-        >Created by
-        <a
-          class="text-secondary"
-          href="https://github.com/benarc"
-          target="_blank"
-          >Ben Arc</a
-        >.</small
-      >
-      <small
-        >Repo
-        <a
-          class="text-secondary"
-          href="https://github.com/lnbits/sellcoins"
-          target="_blank"
-          >Sell Coins</a
-        >.</small
-      >
+      <small>Created by
+        <a class="text-secondary" href="https://github.com/benarc" target="_blank">Ben Arc</a>.</small>
+      <small>Repo
+        <a class="text-secondary" href="https://github.com/lnbits/sellcoins" target="_blank">Sell Coins</a>.</small>
     </q-card-section>
   </q-card>
 </q-expansion-item>
