--- a/templates/sellcoins/order.html
+++ b/templates/sellcoins/order.html
@@ -6,17 +6,12 @@
         <div class="text-center">
           <a class="text-secondary" href="lightning:{{ lnurl }}">
             <q-responsive :ratio="1" class="q-mx-md">
-              <lnbits-qrcode
-                :value="qrValue"
-                :options="{width: 800}"
-                class="rounded-borders"
-              ></lnbits-qrcode>
+              <lnbits-qrcode :value="lnurl" :options="{width: 800}" class="rounded-borders"></lnbits-qrcode>
             </q-responsive>
           </a>
         </div>
         <div class="row q-mt-lg q-gutter-sm">
-          <q-btn outline color="grey" @click="copyText(qrValue)"
-            >Copy Withdraw
+          <q-btn outline color="grey" @click="copyText(lnurl)">Copy Withdraw
           </q-btn>
         </div>
       </q-card-section>
@@ -25,57 +20,12 @@
   <div class="col-12 col-sm-6 col-md-5 col-lg-4 q-gutter-y-md">
     <q-card>
       <q-card-section>
-        <h4
-          v-text="settings.title"
-          class="text-subtitle1 q-mb-sm q-mt-none"
-        ></h4>
-        <p class="q-my-none" v-text="settings.description"></p
-      ></q-card-section>
-      <q-card-section class="q-pa-none">
-        <q-separator></q-separator>
-        <q-card for="product in products">
-          <q-card-section>
-            <div class="row">
-              <div class="col-6">
-                <q-badge color="primary" label="Price"></q-badge>
-              </div>
-              <div class="col-6 text-right">
-                <span v-text="product.price"></span>
-                <span v-text="product.fiat"></span>
-              </div>
-            </div>
-          </q-card-section>
-          <q-card-section>
-            <div class="row">
-              <div class="col-6">
-                <q-badge color="primary" label="Amount"></q-badge>
-              </div>
-              <div class="col-6 text -right">
-                <span v-text="product.amount"></span>{{LNBITS_DENOMINATION}}
-              </div>
-            </div>
-          </q-card-section>
-        </q-card>
+        <h4 class="text-subtitle1 q-mb-sm q-mt-none">Thank you for your order!</h4>
+        <h6 class="text-subtitle1 q-mb-sm q-mt-none">Scan the Qr code to withdraw</h6>
       </q-card-section>
     </q-card>
   </div>
 </div>
-
-<q-dialog v-model="form.show" position="top">
-  <q-card class="q-pa-lg q-pt-xl lnbits__dialog-card"> </q-card>
-</q-dialog>
-
-<q-dialog v-model="qrcode.show" position="top">
-  <q-card class="q-pa-lg q-pt-xl lnbits__dialog-card">
-    <q-responsive :ratio="1" class="q-mx-xl q-mb-md">
-      <lnbits-qrcode :value="qrcode.value"></lnbits-qrcode>
-    </q-responsive>
-    <center>
-      <q-btn label="copy" @click="copyText(qrcode.value)"></q-btn>
-    </center>
-  </q-card>
-</q-dialog>
-
 {% endblock %} {% block scripts %}
 <script>
   window.app = Vue.createApp({
@@ -83,36 +33,13 @@
     mixins: [windowMixin],
     data: function () {
       return {
-        sellcoins_id: '{{sellcoins_id}}',
-        form: {
-          show: false
-        },
-        qrcode: {
-          show: false,
-          value: ''
-        }
+        lnurl: '{{ lnurl }}'
       }
     },
     methods: {
       copyText: function (text) {
         navigator.clipboard.writeText(text)
-      },
-      async getData(sellcoins_id) {
-        await LNbits.api
-          .request('GET', '/sellcoins/api/v1/sellcoins' + sellcoins_id)
-          .then(response => {
-            this.products.push(response.data.products)
-            this.settings.push(response.data.settings)
-            this.form.show = false
-          })
-          .catch(error => {
-            LNbits.utils.notifyApiError(error)
-            this.form.show = false
-          })
       }
-    },
-    created: function () {
-      eventReactionWebocket(this.sellcoins_id)
     }
   })
 </script>
