--- a/templates/sellcoins/products.html
+++ b/templates/sellcoins/products.html
@@ -1,28 +1,26 @@
 {% extends "public.html" %} {% block page %}
 
 <div class="row q-col-gutter-md justify-center">
-  <div
-  class="q-pa-xl text-white"
-  :style="`background-image: url('${header_image}'); background-size: cover; background-position: center;`"
->
-<center>
-  <span class="text-h2" v-text="title"></span>
-  <br/>
-  <span class="text-h6" v-text="description"></span>
-</center>
-</div></div>
+  <div class="q-pa-xl text-white"
+    :style="`background-image: url('${header_image}'); background-size: cover; background-position: center;`">
+    <center>
+      <span class="text-h2" v-text="title"></span>
+      <br />
+      <span class="text-h6" v-text="description"></span>
+    </center>
+  </div>
+</div>
 <div class="row q-col-gutter-md justify-center">
   <div class="q-gutter-md row wrap justify-start">
 
-    <q-card
-      v-for="product in products"
-      :key="product.id"
-      class="q-ma-sm"
-      style="width: 200px"
-    >
+    <q-card v-for="product in products" :key="product.id" class="q-ma-sm" style="width: 200px">
       <q-card-section>
         <div class="text-h4"><span v-text="denomination + ' ' + product.amount"></span></div>
-        <div class="text-h6"><span v-text="product.title"></span></div>
+        <div v-if="auto_convert"><span
+            v-text="'( roughly ' + convert_amount(product.amount) + ' ' + receive_denomination + ' )'"></span></div>
+        <div v-else class="text-h6"><span
+            v-text="'( roughly ' + product.price + ' ' + receive_denomination + ' )'"></span></div>
+        <div class="text-h6 q-pt-lg"><span v-text="product.title"></span></div>
         <div class="text-subtitle2 text-grey-7"><span v-text="product.description"></span></div>
       </q-card-section>
       <q-card-section>
@@ -38,25 +36,13 @@
 </q-dialog>
 
 <q-dialog v-model="qrcode.show" position="top">
-  <q-card
-  v-if="qrcode.payment_request"
-  class="q-pa-lg q-pt-xl lnbits__dialog-card"
->
-    <lnbits-qrcode
-      :value="qrcode.payment_request"
-      class="rounded-borders"
-    ></lnbits-qrcode>
-
-  <div class="row q-mt-lg">
-    <q-btn
-      outline
-      color="grey"
-      @click="copyText(qrcode.payment_request)"
-      >Copy invoice</q-btn
-    >
-    <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
-  </div>
-</q-card>
+  <q-card v-if="qrcode.payment_request" class="q-pa-lg q-pt-xl lnbits__dialog-card">
+    <lnbits-qrcode :value="qrcode.payment_request" class="rounded-borders"></lnbits-qrcode>
+    <div class="row q-mt-lg">
+      <q-btn outline color="grey" @click="copyText(qrcode.payment_request)">Copy invoice</q-btn>
+      <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
+    </div>
+  </q-card>
 </q-dialog>
 
 {% endblock %} {% block scripts %}
@@ -67,16 +53,20 @@
     data: function () {
       return {
         title: '{{ title }}',
+        exchange_rate: '{{ exchange_rate }}',
+        auto_convert: '{{ auto_convert }}',
+        haircut: '{{ haircut }}',
         description: '{{ description }}',
-        products: {{ products | tojson }},
+        products: '{{ products }}'.length > 0 ? JSON.parse('{{ products | tojson }}') : [],
         denomination: '{{ denomination }}',
+        receive_denomination: '{{LNBITS_DENOMINATION}}',
         form: {
           show: false
         },
         qrcode: {
           show: false,
           payment_request: '',
-          payment_hash: '',
+          checking_id: ''
         }
       }
     },
@@ -90,9 +80,10 @@
             'GET',
             '/sellcoins/api/v1/order/' + productId
           )
-          this.qrcode.show = true
           this.qrcode.payment_request = response.data.extra.fiat_payment_request
-          this.qrcode.payment_hash = response.data.extra.payment_hash
+          this.qrcode.checking_id = response.data.checking_id
+          eventReactionWebocket(this.qrcode.checking_id)
+          this.subscribeToPaymentWS(this.qrcode.checking_id)
         } catch (err) {
           this.$q.notify({
             type: 'warning',
@@ -100,10 +91,35 @@
           });
         }
       },
+      convert_amount(amount) {
+        return parseInt((this.exchange_rate * amount - (this.exchange_rate * amount / 100 * parseInt(this.haircut))))
+      },
+      subscribeToPaymentWS(checkingId) {
+        try {
+          const url = new URL(window.location)
+          url.protocol = url.protocol === 'https:' ? 'wss' : 'ws'
+          url.pathname = `/api/v1/ws/${checkingId}`
+          const ws = new WebSocket(url)
+          ws.onmessage = async ({ data }) => {
+            const order_id = JSON.parse(data)
+            Quasar.Notify.create({
+              type: 'positive',
+              message: 'Invoice Paid! Redirecting in 3 seconds...'
+            })
+            this.qrcode.show = false
+            ws.close()
+            setTimeout(() => {
+              window.location.href = `/sellcoins/order/${order_id}`
+            }, 3000)
+          }
+        } catch (err) {
+          console.warn(err)
+          LNbits.utils.notifyApiError(err)
+        }
+      },
     },
-    created: function () {
+    created: async function () {
       console.log(this.products)
-     // eventReactionWebocket(this.sellcoins_id)
     }
   })
 </script>
