--- a/templates/sellcoins/products.html
+++ b/templates/sellcoins/products.html
@@ -80,11 +80,13 @@
             'GET',
             '/sellcoins/api/v1/order/' + productId
           )
-          this.qrcode.payment_request = response.data.extra.fiat_payment_request
-          this.qrcode.checking_id = response.data.checking_id
-          eventReactionWebocket(this.qrcode.checking_id)
+          this.qrcode.payment_request = response.data.payment_request
+          this.qrcode.checking_id = response.data.payment_hash
+          // eventReactionWebocket(this.qrcode.checking_id)
           this.subscribeToPaymentWS(this.qrcode.checking_id)
+          this.qrcode.show = true
         } catch (err) {
+          console.log(err)
           this.$q.notify({
             type: 'warning',
             message: 'Failed to create order'
@@ -96,6 +98,7 @@
       },
       subscribeToPaymentWS(checkingId) {
         try {
+          console.log('### Subscribing to payment WS for checking ID:', checkingId)
           const url = new URL(window.location)
           url.protocol = url.protocol === 'https:' ? 'wss' : 'ws'
           url.pathname = `/api/v1/ws/${checkingId}`
