--- a/templates/sellcoins/index.html
+++ b/templates/sellcoins/index.html
@@ -99,7 +99,7 @@
         </q-card-section>
         <q-card-section>
           <q-btn round color="red" size="sm" icon="delete" @click="deleteProduct(product.id)"></q-btn>
-          <q-btn round color="blue" size="sm" icon="call_made" :href="'/sellcoins/' + product.id"></q-btn>
+          <q-btn round color="blue" size="sm" icon="call_made" :href="'/sellcoins/' + product.id" target="_blank" class="float-right"></q-btn>
         </q-card-section>
       </q-card>
     </div>
