--- a/templates/sellcoins/order.html
+++ b/templates/sellcoins/order.html
@@ -2,7 +2,20 @@
 <div class="row q-col-gutter-md justify-center">
   <div class="col-12 col-sm-6 col-md-5 col-lg-4">
     <q-card class="q-pa-lg">
-      <q-card-section class="q-pa-none">
+      <q-card-section v-if="orderStatus === 'unpaid'" class="q-pa-none">
+        <div class="text-center">
+          <a class="text-secondary" :href="paymentRequest">
+            <q-responsive :ratio="1" class="q-mx-md">
+              <lnbits-qrcode :value="paymentRequest" :options="{width: 800}" class="rounded-borders"></lnbits-qrcode>
+            </q-responsive>
+          </a>
+        </div>
+        <div class="row q-mt-lg q-gutter-sm">
+          <q-btn outline color="grey" @click="copyText(paymentRequest)">Copy Payment Request</q-btn>
+          <q-btn outline color="grey" :href="paymentRequest" target="_blank"  class="float-right">Open Link</q-btn>
+        </div>
+      </q-card-section>
+      <q-card-section v-else-if="orderStatus === 'paid'" class="q-pa-none">
         <div class="text-center">
           <a class="text-secondary" href="lightning:{{ lnurl }}">
             <q-responsive :ratio="1" class="q-mx-md">
@@ -15,14 +28,30 @@
           </q-btn>
         </div>
       </q-card-section>
+      <q-card-section v-else>
+        <div class="text-center">
+          <p class="text-subtitle2 q-mb-sm q-mt-none">You're Done!</p>
+        </div>
+      </q-card-section>
     </q-card>
   </div>
   <div class="col-12 col-sm-6 col-md-5 col-lg-4 q-gutter-y-md">
     <q-card>
-      <q-card-section>
+      <q-card-section v-if="orderStatus === 'unpaid'">
+        <h4 class="text-subtitle1 q-mb-sm q-mt-none">Order Not Paid</h4>
+        <p class="text-subtitle2 q-mb-sm q-mt-none">Please scan the QR code to pay.</p>
+      </q-card-section>
+      <q-card-section v-else-if="orderStatus === 'paid'">
         <h4 class="text-subtitle1 q-mb-sm q-mt-none">Thank you for your order!</h4>
         <h6 class="text-subtitle1 q-mb-sm q-mt-none">Scan the Qr code to withdraw</h6>
       </q-card-section>
+      <q-card-section v-else-if="orderStatus === 'claimed'">
+        <h4 class="text-subtitle1 q-mb-sm q-mt-none">Order Claimed</h4>
+        <p class="text-subtitle2 q-mb-sm q-mt-none">Your order sats have been transferred.</p>
+      </q-card-section>
+      <q-card-section v-else>
+        <h4 class="text-subtitle1 q-mb-sm q-mt-none">Order Error</h4>
+        <p class="text-subtitle2 q-mb-sm q-mt-none">Order status unknown.</p>
     </q-card>
   </div>
 </div>
@@ -33,13 +62,48 @@
     mixins: [windowMixin],
     data: function () {
       return {
-        lnurl: '{{ lnurl }}'
+        lnurl: '{{ lnurl }}',
+        orderId: '{{ order_id }}',
+        orderStatus: '{{ order_status }}',
+        paymentRequest: '{{ payment_request }}',
+        paymentHash: '{{ payment_hash }}',
       }
     },
     methods: {
       copyText: function (text) {
         navigator.clipboard.writeText(text)
+      },
+      subscribeToPaymentWS(id, message) {
+        console.log(`Subscribing to payment updates for ID: ${id}`, message);
+        try {
+          const url = new URL(window.location)
+          url.protocol = url.protocol === 'https:' ? 'wss' : 'ws'
+          url.pathname = `/api/v1/ws/${id}`
+          const ws = new WebSocket(url)
+          ws.onmessage = async ({ data }) => {
+            Quasar.Notify.create({
+              type: 'positive',
+              message: message,
+              caption: 'Redirecting...',
+            })
+            ws.close()
+            setTimeout(() => {
+              location.reload();
+            }, 3000)
+          }
+        } catch (err) {
+          console.warn(err)
+          LNbits.utils.notifyApiError(err)
+        }
+      },
+    },
+    created() {
+      if (this.orderStatus === 'unpaid') {
+        this.subscribeToPaymentWS(this.paymentHash, 'Payment received')
+      } else if (this.orderStatus === 'paid') {
+        this.subscribeToPaymentWS(this.orderId, 'Order claimed')
       }
+
     }
   })
 </script>
