--- a/templates/sellcoins/order.html
+++ b/templates/sellcoins/order.html
@@ -4,7 +4,12 @@
     <q-card class="q-pa-lg">
       <q-card-section v-if="orderStatus === 'unpaid'" class="q-pa-none">
         <div class="text-center">
-          <a class="text-secondary" :href="paymentRequest">
+          <a class="text-secondary" v-if="paymentRequest.slice(0, 4) === 'lnbc'" :href="'lightning:' + paymentRequest">
+            <q-responsive :ratio="1" class="q-mx-md">
+              <lnbits-qrcode :value="paymentRequest" :options="{width: 800}" class="rounded-borders"></lnbits-qrcode>
+            </q-responsive>
+          </a>
+          <a class="text-secondary" v-else :href="paymentRequest">
             <q-responsive :ratio="1" class="q-mx-md">
               <lnbits-qrcode :value="paymentRequest" :options="{width: 800}" class="rounded-borders"></lnbits-qrcode>
             </q-responsive>
@@ -12,11 +17,13 @@
         </div>
         <div class="row q-mt-lg q-gutter-sm">
           <q-btn outline color="grey" @click="copyText(paymentRequest)">Copy Payment Request</q-btn>
+          <q-btn outline color="grey" v-if="paymentRequest.slice(0, 4) !== 'lnbc'" :href="paymentRequest"
+            target="_blank" class="float-right">Open Link</q-btn>
         </div>
       </q-card-section>
       <q-card-section v-else-if="orderStatus === 'paid'" class="q-pa-none">
         <div class="text-center">
-          <a class="text-secondary" href="lightning:{{ lnurl }}">
+          <a class="text-secondary" :href="'lightning:' + lnurl">
             <q-responsive :ratio="1" class="q-mx-md">
               <lnbits-qrcode :value="lnurl" :options="{width: 800}" class="rounded-borders"></lnbits-qrcode>
             </q-responsive>
@@ -38,7 +45,8 @@
     <q-card style="box-shadow: none !important">
       <q-card-section v-if="orderStatus === 'unpaid'">
         <h4 class="q-mb-sm q-mt-none">Order Not Paid</h4>
-        <h5 class="q-mb-sm q-mt-none">Please scan the QR code to pay.</h5>
+        <h5 v-if="paymentRequest.slice(0, 4) === 'lnbc'" class="q-mb-sm q-mt-none">Please scan the QR code to pay.</h5>
+        <h5 v-else class="q-mb-sm q-mt-none">Please scan the QR code to pay.</h5>
         <img src="/sellcoins/static/image/atm_in.png" class="q-mb-sm q-mt-none" alt="ATM in">
       </q-card-section>
       <q-card-section v-else-if="orderStatus === 'paid'">
