--- a/templates/sellcoins/_nostr_chat.html
+++ b/templates/sellcoins/_nostr_chat.html
@@ -26,7 +26,7 @@
     </q-btn-dropdown>
 
   <div class="q-pa-md row justify-center">
-    <div style="width: 100%; max-width: 400px">
+    <div class="full-width q-pl-md q-pr-md">
       <q-chat-message
         :text="['I didnt receive my coins']"
         sent
@@ -35,7 +35,9 @@
         :text="['Which one of your orders, can you please pass me the order ID?']"
       ></q-chat-message>
     </div>
-     <q-input disable rounded standout label="message">
+    </div>
+    <div class="q-pa-md row">
+     <q-input class="full-width" disable rounded standout label="message">
         <template v-slot:after>
           <q-btn disable round dense flat icon="send" />
         </template>
