--- a/templates/sellcoins/_api_docs.html
+++ b/templates/sellcoins/_api_docs.html
@@ -1,14 +1,10 @@
 <q-card>
-  <q-card-section>
+  <q-card-section class="q-pb-none">
     <p>
-      GRAB YOU STRIPE
-      <a href="https://dashboard.stripe.com/test/apikeys">API KEY</a><br />
-      <small>
-        Created by,
-        <a class="text-secondary" href="https://github.com/arcbtc">Ben Arc</a></small>
+      REQUIRES ADMIN TO ENABLE FIAT PROVIDERS
     </p>
   </q-card-section>
   <q-expansion-item group="extras" icon="swap_vertical_circle" label="API info" :content-inset-level="0.5">
-    <q-btn flat label="Swagger API" type="a" href="../docs#/buy"></q-btn>
+    <q-btn flat label="Swagger API" type="a" href="../docs#/sellcoins"></q-btn>
   </q-expansion-item>
 </q-card>
