--- a/templates/sellcoins/_sellcoins.html
+++ b/templates/sellcoins/_sellcoins.html
@@ -1,11 +1,15 @@
 <q-expansion-item group="extras" icon="info" label="More info">
   <q-card>
     <q-card-section>
-      <p>Sell coins for cash</p>
       <small>Created by
         <a class="text-secondary" href="https://github.com/benarc" target="_blank">Ben Arc</a>.</small>
+        <br/>
       <small>Repo
         <a class="text-secondary" href="https://github.com/lnbits/sellcoins" target="_blank">Sell Coins</a>.</small>
-    </q-card-section>
+        <br/>
+      <small>
+        Developers,
+        <a class="text-secondary" href="https://github.com/arcbtc">Ben Arc</a></small>, <a class="text-secondary" href="https://github.com/motorina0">Vlad Stan</a></small>
+      </q-card-section>
   </q-card>
 </q-expansion-item>
